--- a/app/src/main/res/layout/fragment_mic.xml
+++ b/app/src/main/res/layout/fragment_mic.xml
@@ -19,7 +19,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:text="Press mic button to input voice..."
-        android:textColor="#000"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/voiceBtn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
     <EditText
         android:id="@+id/phone"
         android:layout_width="fill_parent"
-        android:layout_height="100dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
@@ -58,6 +58,8 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:inputType="text"
+        android:textColor="#1A1A1A"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,6 +88,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="163dp"
         android:text="hello"
+        android:textColor="#FFFFFF"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
