Looks/Ui Design

--- a/app/src/main/res/layout/fragment_mic.xml
+++ b/app/src/main/res/layout/fragment_mic.xml
@@ -87,7 +87,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="163dp"
-        android:text="hello"
+        android:textStyle="bold"
+        android:text="Mood"
         android:textColor="#FFFFFF"
         android:textAlignment="center"
         android:textSize="20sp"
